[package]
name = "ndarray-test"
version = "0.1.0"
authors = ["Matz Haugen <matz.haugen@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.14", features = ["blas"] }
blas = "0.20"
openblas-src = "0.9"
rand = "0.8.0"
